--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -226,44 +226,37 @@
 
 //SWIPER///////////////////////////////////////////////////////////////////////////////////////////
 .slider {
-   position: relative;
    min-height: 740px;
    padding: 80px 0;
 }
-.swiper {
-   width: 750px;
-   height: 580px;
-}
-.swiper-slide {
+.swiper-wrapper {
    display: flex;
    align-items: center;
-   & img {
-      width: 100%;
-   }
 }
-
-.swiper-button-next,
-.swiper-button-prev {
-   color: $color-red;
-   &::after {
-      font-weight: 900;
-   }
+.image-slider {
+   padding: 30px 0 70px 0;
 }
-
-.swiper-button-prev {
-   left: 390px;
-   &::after {
-      content: url('../icons/arrow-left.png');
-      font-weight: 900;
-   }
+.image-slider__slide {
+   display: flex;
+   justify-content: center;
 }
-.swiper-button-next {
-   right: 390px;
-   &::after {
-      content: url('../icons/arrow-right.png');
-      font-weight: 900;
-   }
+.image-slider__image {
+   max-width: 85%;
+   text-align: center;
 }
-.swiper-pagination-bullets.swiper-pagination-horizontal {
-   bottom: 50px;
+.image-slider__image img { 
+   max-width: 100%;
+}
+.image-slider .swiper-pagination-bullet {
+   width: 20px;
+   height: 20px;
+   line-height: 20px;
+   font-size: 14px;
+   
+}
+.swiper-button-prev::after {
+   content: url('../icons/arrow-left.png');
+}
+.swiper-button-next::after {
+   content: url('../icons/arrow-right.png');
 }
