--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -252,11 +252,165 @@
    height: 20px;
    line-height: 20px;
    font-size: 14px;
-   
+   background-color: $color-red;
 }
 .swiper-button-prev::after {
    content: url('../icons/arrow-left.png');
 }
 .swiper-button-next::after {
    content: url('../icons/arrow-right.png');
+}
+
+//CATALOG//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////@at-root
+.catalog {
+   min-height: 1184px;
+   padding-bottom: 103px;
+   text-align: center;
+   &__title {
+      font-size: 30px;
+      font-weight: 400px;
+      margin-bottom: 55px;
+      text-transform: uppercase;
+   }
+   &__tabs {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-transform: uppercase;
+   }
+   &__tab {
+      height: 50px;
+      width: 200px;
+      border: 2px solid #D0D0D0;
+      font-size: 18px;
+      font-weight: 400px;
+      line-height: 48px;
+      transform: skewX(-22deg);
+      margin: 0 5px;
+      margin-bottom: 60px;
+      transition: 0.5s all;
+      &:hover {
+         box-shadow: 3px 3px 20px $color-red;
+         border: none;
+      }
+      &-active {
+         background-color: $color-red;
+         border: none;
+         color: #FFFFFF;
+      }
+      cursor: pointer;
+      div {
+         transform: skewX(22deg);
+      }
+   }
+}
+
+.catalog__content {
+   display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
+   min-height: 900px;
+}
+
+.catalog-item {
+   display: flex;
+   flex-direction: column;
+   margin-bottom: 20px;
+   padding: 20px 18px;
+   align-items: center;
+   min-height: 440px;
+   width: 300px;
+   border: 2px solid #E8E8E8;
+   
+
+   &__img {
+      max-width: 100%;
+      height: 200px;
+      margin-bottom: 15px;
+   }
+
+   &__subtitle {
+      color: #0D0D0D;
+      font-size: 16px;
+      font-weight: 700;
+      margin-bottom: 18px;
+   }
+   &__decription {
+      
+      font-size: 14px;
+      font-weight: 300;
+      line-height: 22px;
+      color: #0D0D0D;
+      margin-bottom: 10px;
+   }
+
+   &__link {
+      position: relative;
+      color: $color-red;
+      text-decoration: underline;
+      
+      
+   }
+
+   &__line {
+      height: 2px;
+      width: 260px;
+      background: #E8E8E8;
+      margin-bottom: 20px;
+   }
+
+   &__footer {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      align-items: center;
+   }
+
+   &__button {
+      height: 40px;
+      width: 130px;
+      border-radius: 7px;
+   }
+   &__old-price {
+      text-align: start;
+      font-size: 14px;
+      font-weight: 300;
+      color: #555555;
+      margin-bottom: 2px;
+      text-decoration: line-through;
+   }
+   &__price {
+      font-size: 20px;
+      font-weight: 700;
+   }
+
+   
+
+   &__wrapper {
+      display: flex;
+      overflow: hidden;
+      flex: 1 1 auto;
+      min-height: 335px;
+      width: 250px;
+   }
+
+   &__content {
+      width: 250px;
+      margin-left: 0%;
+      transition: 0.5s all;
+      &-active {
+         width: 250px;
+         margin-left: -100%;
+         
+      }
+   }
+   &__list {
+      width: 250px;
+      margin-right: -100%;
+      transition: 0.5s all;
+      &-active {
+         width: 250px;
+         margin-right: 0%;
+      }
+   }
 }
