--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -293,7 +293,7 @@
          box-shadow: 3px 3px 20px $color-red;
          border: none;
       }
-      &-active {
+      &.active {
          background-color: $color-red;
          border: none;
          color: #FFFFFF;
@@ -311,7 +311,6 @@
    flex-wrap: wrap;
    min-height: 900px;
 }
-
 .catalog-item {
    display: flex;
    flex-direction: column;
@@ -321,14 +320,11 @@
    min-height: 440px;
    width: 300px;
    border: 2px solid #E8E8E8;
-   
-
    &__img {
       max-width: 100%;
       height: 200px;
       margin-bottom: 15px;
    }
-
    &__subtitle {
       color: #0D0D0D;
       font-size: 16px;
@@ -343,29 +339,22 @@
       color: #0D0D0D;
       margin-bottom: 10px;
    }
-
    &__link {
-      position: relative;
       color: $color-red;
       text-decoration: underline;
-      
-      
    }
-
    &__line {
       height: 2px;
       width: 260px;
       background: #E8E8E8;
       margin-bottom: 20px;
    }
-
    &__footer {
       display: flex;
       width: 100%;
       justify-content: space-between;
       align-items: center;
    }
-
    &__button {
       height: 40px;
       width: 130px;
@@ -383,9 +372,6 @@
       font-size: 20px;
       font-weight: 700;
    }
-
-   
-
    &__wrapper {
       display: flex;
       overflow: hidden;
@@ -393,24 +379,50 @@
       min-height: 335px;
       width: 250px;
    }
-
    &__content {
       width: 250px;
       margin-left: 0%;
       transition: 0.5s all;
-      &-active {
+      &.active { 
          width: 250px;
          margin-left: -100%;
-         
       }
    }
    &__list {
+      display: flex;
+      flex-direction: column;
       width: 250px;
       margin-right: -100%;
       transition: 0.5s all;
-      &-active {
+      & ul {
+         flex: 1 1 auto;
+         text-align: left;
+      }
+      & li {
+        position: relative;
+        font-size: 14px;
+        font-weight: 300;
+        line-height: 21px; 
+        margin-bottom: 5px;
+        padding-left: 18px;
+        &::before {
+         content: '';
+         position: absolute;
+         top: 6px;
+         left: 5px;
+         display: block;
+         height: 5px;
+         width: 5px;
+         background: $color-red;
+        }
+      }
+      &.active {
          width: 250px;
          margin-right: 0%;
+      }
+      &-link {
+         text-transform: uppercase;
+         margin-bottom: 17px;
       }
    }
 }
