--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -262,15 +262,142 @@
 }
 
 //CATALOG//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////@at-root
-.catalog {
+.cards {
    min-height: 400px;
-   padding-bottom: 103px;
    text-align: center;
+   margin-bottom: 80px;
    &__title {
-      font-size: 30px;
+      @include adaptiv-value("font-size", 30, 23, 1);
       font-weight: 400px;
       margin-bottom: 55px;
       text-transform: uppercase;
+   }
+   &-item {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      margin: 0 7px;
+      margin-bottom: 14px;
+      padding: 20px 18px;
+      align-items: center;
+      min-height: 440px;
+      width: 300px;
+      border: 2px solid #E8E8E8;
+      
+      &__image {
+         min-width: 140px;
+         margin: 0 auto;
+         margin-bottom: 15px;
+      }
+      &__img {
+         max-width: 100%;
+         height: 200px;
+         
+      }
+      &__subtitle {
+         color: #0D0D0D;
+         font-size: 16px;
+         font-weight: 700;
+         margin-bottom: 18px;
+      }
+      &__wrapper {
+         display: flex;
+         overflow: hidden;
+         flex: 1 1 auto;
+         min-height: 335px;
+         width: 250px;
+      }
+      &__content {
+         display: flex;
+         flex-direction: column;
+         width: 250px;
+         margin-left: 0%;
+         transition: 0.5s all;
+         &.active { 
+            width: 250px;
+            margin-left: -100%;
+         }
+      }
+      &__list {
+         
+         display: flex;
+         flex-direction: column;
+         width: 250px;
+         margin-right: -100%;
+         transition: 0.5s all;
+         & ul {
+            flex: 1 1 auto;
+            text-align: left;
+            margin-bottom: 30px;
+         }
+         & li {
+           position: relative;
+           font-size: 14px;
+           font-weight: 300;
+           line-height: 21px; 
+           margin-bottom: 5px;
+           padding-left: 18px;
+           &::before {
+            content: '';
+            position: absolute;
+            top: 6px;
+            left: 5px;
+            display: block;
+            height: 5px;
+            width: 5px;
+            background: $color-red;
+           }
+         }
+         &.active {
+            width: 250px;
+            margin-right: 0%;
+         }
+      }
+      &__decription {
+         flex: 1 1 auto;
+         font-size: 14px;
+         font-weight: 300;
+         line-height: 22px;
+         color: #0D0D0D;
+         margin-bottom: 30px;
+         
+      }
+      &__link {
+         
+         color: $color-red;
+         text-decoration: underline;
+         text-transform: uppercase;
+      }
+      &__line {
+         height: 2px;
+         width: 260px;
+         background: #E8E8E8;
+         margin: 20px 0;
+      }
+      &__footer {
+         display: flex;
+         width: 100%;
+         justify-content: space-between;
+         align-items: center;
+      }
+      &__button {
+         height: 40px;
+         width: 130px;
+         border-radius: 7px;
+      }
+      &__old-price {
+         text-align: start;
+         font-size: 14px;
+         font-weight: 300;
+         color: #555555;
+         margin-bottom: 2px;
+         text-decoration: line-through;
+      }
+      &__price {
+         font-size: 20px;
+         font-weight: 700;
+      }
+      
    }
 }
 
@@ -296,7 +423,7 @@
          box-shadow: 3px 3px 20px $color-red;
          border: none;
       }
-      &--active {
+      &.active {
          background-color: $color-red;
          border: none;
          color: #FFFFFF;
@@ -310,137 +437,56 @@
 
    &__panel {
       display: none;
-      &--active {
+      justify-content: start;
+      &.active {
          display: flex;
-         justify-content: start;
+         
          flex-wrap: wrap;
       }
+      
    }
 }
 
 
-.catalog-item {
-   display: flex;
-   flex-direction: column;
-   margin-bottom: 20px;
-   margin-right: 15px;
-   padding: 20px 18px;
-   align-items: center;
-   min-height: 440px;
-   width: 300px;
-   border: 2px solid #E8E8E8;
-   &__image {
-      min-width: 140px;
-      margin: 0 auto;
-      margin-bottom: 15px;
-   }
-   &__img {
-      max-width: 100%;
-      height: 200px;
-      
-   }
-   &__subtitle {
-      color: #0D0D0D;
-      font-size: 16px;
+//FEEDBACK///////////////////////////////////////////////////////////////////////////////////////
+.feedback {
+   text-align: center;
+   &__title {
+      @include adaptiv-value("font-size", 30, 28, 1);
       font-weight: 700;
-      margin-bottom: 18px;
-   }
-   &__wrapper {
-      display: flex;
-      overflow: hidden;
-      flex: 1 1 auto;
-      min-height: 335px;
-      width: 250px;
-   }
-   &__content {
-      display: flex;
-      flex-direction: column;
-      width: 250px;
-      margin-left: 0%;
-      transition: 0.5s all;
-      &.active { 
-         width: 250px;
-         margin-left: -100%;
-      }
-   }
-   &__list {
-      
-      display: flex;
-      flex-direction: column;
-      width: 250px;
-      margin-right: -100%;
-      transition: 0.5s all;
-      & ul {
-         flex: 1 1 auto;
-         text-align: left;
-         margin-bottom: 30px;
-      }
-      & li {
-        position: relative;
-        font-size: 14px;
-        font-weight: 300;
-        line-height: 21px; 
-        margin-bottom: 5px;
-        padding-left: 18px;
-        &::before {
-         content: '';
-         position: absolute;
-         top: 6px;
-         left: 5px;
-         display: block;
-         height: 5px;
-         width: 5px;
-         background: $color-red;
-        }
-      }
-      &.active {
-         width: 250px;
-         margin-right: 0%;
-      }
-   }
-   &__decription {
-      flex: 1 1 auto;
-      font-size: 14px;
-      font-weight: 300;
-      line-height: 22px;
-      color: #0D0D0D;
-      margin-bottom: 30px;
-      
-   }
-   &__link {
-      
-      color: $color-red;
-      text-decoration: underline;
       text-transform: uppercase;
+      margin-bottom: 60px;
    }
-   &__line {
-      height: 2px;
-      width: 260px;
-      background: #E8E8E8;
-      margin: 20px 0;
-   }
-   &__footer {
+   &__items {
       display: flex;
-      width: 100%;
-      justify-content: space-between;
-      align-items: center;
+      margin-bottom: 60px;
    }
-   &__button {
-      height: 40px;
-      width: 130px;
-      border-radius: 7px;
+   &__image {
+      border-radius: 100%;
+      height: 170px;
+      width: 170px;
+      margin-right: 60px;
    }
-   &__old-price {
-      text-align: start;
-      font-size: 14px;
-      font-weight: 300;
-      color: #555555;
-      margin-bottom: 2px;
-      text-decoration: line-through;
+   &__item {
+      text-align: left;
    }
-   &__price {
-      font-size: 20px;
+   &__name {
+      font-size: 18px;
       font-weight: 700;
+      margin-bottom: 3px;
    }
-   
+   &__count {
+      font-size: 14px;
+      font-weight: 500;
+      color: #646464;
+      margin-bottom: 10px;
+   }
+   &__text p {
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 24px;
+      margin-bottom: 20px;
+      max-width: 680px;
+   }
 }
+
